# s390x-porting-mcp

./: .gitignore  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  update-kb.yml
agent-integrations/cursor/: mcp.json
agent-integrations/ibm-bob/: mcp.json
docs/: MAINTENANCE.md
docs/superpowers/specs/: 2026-05-19-s390x-mcp-server-design.md
embedding-generation/: Dockerfile  eval_questions.json  fetch_build_scripts.py  fetch_wiki_pages.py  generate_chunks.py  load_oss_kb.py  local_vectorstore_creation.py  requirements.txt  run_eval.sh
jenkins/: job-dsl.groovy
mcp-server/: Dockerfile  requirements.txt  server.json  server.py
mcp-server/data/: script_index.json
mcp-server/patterns/: c-cpp-patterns.txt  endian-fixes.txt  endian-patterns.txt  go-patterns.txt  java-patterns.txt  python-patterns.txt
mcp-server/tests/: test_build_script_utils.py  test_docker_utils.py  test_endian_scan.py  test_kb_search.py  test_port_analysis.py  test_skopeo_tool.py
mcp-server/utils/: build_script_utils.py  cli_utils.py  config.py  docker_utils.py  endian_scan_utils.py  error_handling.py  invocation_logger.py  kb_search_utils.py  port_analysis_utils.py  skopeo_tool.py
s390x_kb_search/: __init__.py  config.py  evaluation.py  loaders.py  resources.py  response.py  search.py
scripts/: update-kb.sh
